[package]
name = "moosik"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "moosik"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.31", features = ["default"] }
egui = "0.31"
rodio = { version = "0.20", features = ["symphonia-all"] }
lofty = "0.22"
rfd = "0.15"
rustfft = "6"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
rtrb = "0.3.4"
symphonia = { version = "0.5", features = ["flac", "mp3", "vorbis", "isomp4", "aac"] }
cpal = "0.15"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target.'cfg(windows)'.dependencies]
wasapi = "0.23.0"
# timeBeginPeriod — raise the system timer resolution so the frame limiter's
# thread::sleep is accurate enough for high-refresh displays.
windows-sys = { version = "0.59", features = ["Win32_Media"] }

[profile.release]
opt-level = 3
lto = "thin"          # cross-crate inlining — faster decode + FFT
codegen-units = 1     # single unit lets LLVM optimise across all code
panic = "abort"       # no unwinding overhead
