[package]
name = "moosik"
version = "1.2.1"
edition = "2024"

[[bin]]
name = "moosik"
path = "src/main.rs"

[features]
default = ["asio-dsd"]
# Native DSD output through ASIO drivers (Windows x86_64 only) — the route to
# bit-perfect DSD512, which exceeds DoP's carrier-rate ceiling. Talks COM
# directly to third-party ASIO drivers; no Steinberg SDK needed, the interface
# is declared by hand (x64-only, where the ASIO thiscall ABI quirk doesn't
# exist). Gated to `cfg(windows)` everywhere it's used, so this is a no-op on
# Linux/macOS regardless of this default. On Windows, defaulting it on just
# surfaces "Native DSD (ASIO)" in the 🔈 menu — actually using it still
# requires picking a specific driver by hand, so it stays inert until a user
# opts in. Disable with `--no-default-features` if you want a build with no
# ASIO/COM code at all.
asio-dsd = []

[dependencies]
eframe = { version = "0.31", features = ["default"] }
egui = "0.31"
rodio = { version = "0.20", features = ["symphonia-all"] }
lofty = "0.22"
rfd = "0.15"
rustfft = "6"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
rtrb = "0.3.4"
lz4_flex = "0.11"
symphonia = { version = "0.5", features = ["flac", "mp3", "vorbis", "isomp4", "aac"] }
cpal = "0.15"
# OS media-key / now-playing integration (MPRIS, SMTC, macOS MediaPlayer).
# use_zbus = pure-Rust D-Bus on Linux, so no system libdbus-1-dev needed.
souvlaki = { version = "0.8", default-features = false, features = ["use_zbus"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target.'cfg(windows)'.dependencies]
wasapi = "0.23.0"
# timeBeginPeriod — raise the system timer resolution so the frame limiter's
# thread::sleep is accurate enough for high-refresh displays.
# Win32_Graphics_Gdi — EnumDisplaySettingsW, to default Max FPS to the monitor's
# refresh rate.
windows-sys = { version = "0.59", features = [
    "Win32_Media", "Win32_Graphics_Gdi",
    # asio-dsd: driver discovery (registry) + COM instantiation + a desktop
    # HWND for drivers that refuse a null init handle.
    "Win32_System_Registry", "Win32_System_Com", "Win32_System_Ole", "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
# Extract the HWND from eframe for SMTC media controls (souvlaki needs it).
raw-window-handle = "0.6"
# asio-dsd: registry driver discovery + COM instantiation for ASIO.
# (Feature-gating optional deps per-target isn't expressive enough in Cargo,
# so the extra windows-sys features ride along unconditionally on Windows —
# they only add API declarations, not linked code.)

[profile.release]
opt-level = 3
lto = "thin"          # cross-crate inlining — faster decode + FFT
codegen-units = 1     # single unit lets LLVM optimise across all code
panic = "abort"       # no unwinding overhead
